# fastapi_pastebin

./: .gitignore  README.md  docker-compose-dev.yaml  dockerfile  pyproject.toml  requirements.txt
backend/: .env  .env.template  main.py  run_main.py
backend/alembic/: env.py
backend/alembic/versions/: 2024_08_26_1242-ce06a15ab19a_add_user_table.py  2024_08_27_1328-dce4955f85d1_update_user_table.py  2024_08_28_1542-406459f05440_update2_user_table.py  2024_08_28_1724-68c90d43c22f_create_users_table.py  2024_08_28_1841-33aae7f24e1c_create_access_tokens_table.py  2024_08_29_1458-2d1e8021ffd4_create_users_and_access_tokens_tables.py  2024_08_30_1151-9843d8876652_update_users_add_registrated_at_create_.py  2024_08_30_1316-ca3914bd33e3_users_table_update_registered_at_and_.py  2024_08_30_1326-f765d92546f0_fix_messages_table_sid_column.py  2024_08_31_1231-c8f6abf3357e_create_table.py
backend/api/: __init__.py
backend/api/api_v1/: crud.py  dependencies.py  models.py  schemas.py  views.py
backend/auth/: backend.py  models.py  schemas.py  strategy.py  users.py  utils.py  views.py
backend/auth/actions/: create_superuser.py
backend/auth/dependencies/: backend.py  (+6 more)
backend/core/: config.py
backend/docker/: app.sh
backend/tasks/: tasks.py
backend/types/: user_id.py
backend/users/: crud.py  dependencies.py  models.py  schemas.py  views.py
backend/utils/: __init__.py  case_converter.py
docker/: app.sh  celery.sh
rabbit/: .env.template  consumer_kyc.py
rabbit/common/: __init__.py  base.py  remoteAPICall.py  user_updates_rabbit.py
rabbit/config/: settings.py
(+12 files in other folders)
