[tool.poetry]
name = "fastapi-school"
version = "0.1.0"
description = ""
authors = ["Lev <lafitel31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
uvicorn = "^0.30.6"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
gunicorn = "^23.0.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}
celery = "^5.4.0"
flower = "^2.0.1"
pika = "^1.3.2"
httpx = "^0.27.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
